--- a/README
+++ b/README
@@ -8,3 +8,5 @@ standard library.
 Packages:
 cljext.binpack - Binary packing/unpacking similar to python's struct library
 cljext.math - Math functions
+cljext.limits - Maximum and minimum of java numeric types
+cljext.base64 - Base64 encoder/decoder
