updated for inclusion of sax parser

--- a/README
+++ b/README
@@ -10,3 +10,4 @@ cljext.binpack - Binary packing/unpacking similar to python's struct library
 cljext.math - Math functions
 cljext.limits - Maximum and minimum of java numeric types
 cljext.base64 - Base64 encoder/decoder
+cljext.sax - Simple Sax parser 
